# aidflow-platform

./: .gitignore  README.md
docs/: PROJECT_SPEC.md  architecture.md  events.md  observability.md
docs/decisions/: 0001-use-monorepo.md  0002-use-kafka-for-domain-events.md  0003-use-api-gateway.md
infrastructure/: docker-compose.yml
infrastructure/observability/: prometheus.yml  promtail-config.yml
infrastructure/observability/grafana/provisioning/dashboards/: aidflow-business-metrics.json  aidflow-containers-metrics.json  aidflow-logs-inspection.json  dashboards.yml
infrastructure/postgres/init/: 01-create-databases.sql
scripts/: start-local.sh  stop-local.sh
services/ai-assistant-service/: README.md
services/campaign-service/: .dockerignore  Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
services/campaign-service/src/main/resources/: application.properties
services/gateway-service/: Dockerfile  README.md  build.gradle.kts
services/gateway-service/src/main/resources/: application.properties
services/identity-service/: .dockerignore  Dockerfile  HELP.md  build.gradle.kts
services/identity-service/src/main/resources/: application.properties  logback-spring.xml
services/notification-service/: Dockerfile  README.md  pyproject.toml
services/notification-service/app/: config.py  dlq_publisher.py  event_handler.py  kafka_consumer.py  main.py  metrics.py  models.py  tracing.py
services/notification-service/tests/: test_event_handler.py  test_kafka_consumer.py
(+73 files in other folders)
